--- a/porsche911_website/styles.css
+++ b/porsche911_website/styles.css
@@ -19,7 +19,7 @@ body {
 
 .hero-section {
   position: relative;
-  background-image: url('https://placehold.co/1420x746');
+  background-image: url('images/911_main.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
